re PR c++/48296 ([C++0x] constexpr member function cannot use the class type it belongs as parameter type or return type)

PR c++/48296
	* decl.c (cp_finish_decl): Defer validation of constexpr member
	functions.
	* class.c (finalize_literal_type_property): Validate them here.
	* semantics.c (is_valid_constexpr_fn): Don't check completeness.

From-SVN: r171675